feat: create autheticate endpoint
